@@ -37,6 +37,9 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.47  2010-01-28 11:34:34  fwarmerdam
+ * handle the shape file length limits more gracefully (#3236)
+ *
  * Revision 1.46  2008-11-12 14:28:15  fwarmerdam
  * DBFCreateField() now works on files with records
  *
@@ -261,12 +264,12 @@ typedef	struct
 
     int		nShapeType;				/* SHPT_* */
     
-    int		nFileSize;				/* SHP file */
+    unsigned int 	nFileSize;				/* SHP file */
 
     int         nRecords;
     int		nMaxRecords;
-    int		*panRecOffset;
-    int		*panRecSize;
+    unsigned int		*panRecOffset;
+    unsigned int		*panRecSize;
 
     double	adBoundsMin[4];
     double	adBoundsMax[4];
