@@ -1,5 +1,8 @@
 2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* shpopen.c/shapefil.h: Handle the .shp file length limits more 
+	gracefully. (http://trac.osgeo.org/gdal/ticket/3236)
+
 	* shpopen.c: Improve the numerical accurancy of algorithms in
 	SHPRewind() (http://trac.osgeo.org/gdal/ticket/3363).
 
